# libcfftables

./: .gitignore  CITATION.cff  CMakeLists.txt  Doxyfile  README.md  build.sh  build_and_test_locally.sh  libcfftables.pc.in
.github/workflows/: docs.yaml  test.yaml
cmake/: libcfftables-config.cmake.in
include/libcfftables/: libcfftables.h
src/: CFF.c  CFF_Internals.h  CFF_Tables.c  CMakeLists.txt  Internal_CFF_Utils.c  README.md  cff.c  cff_internals.h  cff_tables.c  internal_cff_utils.c
src/CFF_Constructions/: Additive_Construction.c  Construction_Function_Internals.h  Doubling_Construction.c  Ext_By_One_Construction.c  Fixed_CFFs.c  ID_Construction.c  Kronecker_Construction.c  Optimized_Kronecker_Construction.c  Porat_Rothschild_Construction.c  README.md  Reed_Solomon_Construction.c  STS_Construction.c  Short_Reed_Solomon_Construction.c  Sperner_Construction.c
src/constructions/: README.md  additive.c  construction_internals.h  doubling.c  ext_by_one.c  finite_fields_wrapper.c  finite_fields_wrapper.h  fixed_cffs.c  id.c  kronecker.c  optimized_kronecker.c  porat_rothschild.c  reed_solomon.c  short_reed_solomon.c  sperner.c  sts.c
tests/: CMakeLists.txt  test_cff.c  test_cff_direct_constructions.c  test_cff_tables.c
tests/construction_tests/: test_additive.c  test_cff_direct_constructions.c  test_doubling.c  test_ext_by_one.c  test_fixed_cffs.c  test_identity.c  test_kronecker.c  test_optimized_kronecker.c  test_porat_rothschild.c  test_reed_solomon.c  test_short_reed_solomon.c  test_sperner.c  test_sts.c
